# class-finder

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  install.ps1  install.sh  load-flow.md  plan.md
.claude/skill/find-class/: SKILL.md
.claude/skills/find-class/: SKILL.md
.github/workflows/: ci.yml  release.yml
.trae/documents/: README 与打包发布（隐藏 CFR_DB 路径）.md  修复安装脚本来源与 Skill 文案.md  实现 class-finder MVP.md
scripts/: install-macos.sh  package-macos.sh
skills/: rust-standards.md
skills/find-class/: SKILL.md
skills/find-class/references/: REFERENCE.md
src/: buffer.rs  cache.rs  catalog.rs  cfr.rs  cli.rs  config.rs  hotspot.rs  incremental.rs  lib.rs  main.rs  parse.rs  probe.rs  registry.rs  scan.rs  source.rs  structure.rs  warmup.rs
tests/: phase2_integration.rs
