[package]
name = "class-finder"
version = "0.0.1-beta"
edition = "2024"
description = "Find Java classes in your local Maven repository and return decompiled source (CFR) with persistent caching."
license = "MIT"
repository = "https://github.com/Groos-dev/class-finder"
readme = "README.md"
keywords = ["maven", "java", "decompiler", "cfr", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hex = "0.4"
ignore = "0.4"
memmap2 = "0.9"
rayon = "1"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
